kubernetes/apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: revenz/mealie
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 4000m
              memory: 2Gi
            limits:
              cpu: "10"
              memory: 8Gi
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /media
              name: mealie-media
            - mountPath: /temp
              name: mealie-temp
            - mountPath: /app/Data
              name: mealie-data
            - mountPath: /app/Logs
              name: mealie-logs
            - mountPath: /app/common
              name: mealie-common
      restartPolicy: Always
      volumes:
        - name: mealie-media
          persistentVolumeClaim:
            claimName: media
        - name: mealie-common
          persistentVolumeClaim:
            claimName: mealie-common
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
        - name: mealie-logs
          persistentVolumeClaim:
            claimName: mealie-logs
        - name: mealie-temp
          emptyDir:
            sizeLimit: 100Gi
