kubernetes/apps/base/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: media
spec:
  selector:
    app: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9925
