kubernetes/apps/base/mealie/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mealie.${cluster_domain}`)
      kind: Rule
      services:
        - name: mealie
          port: 19200
